# scrape_to_md

./: .gitignore  README.md  pyproject.toml  pytest.ini
scrape_to_md/: __init__.py  chrome_service.py  cli.py  config.py  daemon_client.py  detector.py  logging_config.py  pdf.py  web.py  youtube.py
tests/: __init__.py  conftest.py  test_config.py  test_detector.py  test_frontmatter.py  test_youtube.py
